# three-body-orbits

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/assets/shaders/: glow.frag
src/core/: background.cpp  initialconditions.cpp  planet.cpp  solarsystem.cpp
src/include/: background.h  constants.h  initialconditions.h  planet.h  solarsystem.h
